# glass

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SPEC-v2.md  models.toml  package-lock.json  package.json
glass/glass-spike/: Cargo.toml  FINDINGS.md
glass/glass-spike/src/: echo_mcp.rs  main.rs
manifests/: cron.toml  glass.toml
plans/: agent-runtime.md  audit-inbox.md  build-phases.md  capabilities.md  context-assembly.md  core-types.md  discord-gateway.md  docker-sandbox.md  mcp-tool-server.md  projects-scheduling.md  supporting-modules.md  testability.md
providers/glass-calendar/: package.json
providers/glass-calendar/src/: index.ts
providers/glass-companion-tools/: package.json  tsconfig.json
providers/glass-companion-tools/src/: index.ts
providers/glass-identity/: package.json
providers/glass-identity/src/: index.ts
scripts/: install-autostart.sh  install-pi.sh  run.sh  uninstall-autostart.sh
src/: agent.rs  bus.rs  compaction.rs  config.rs  cron.rs  discord.rs  dispatcher.rs  dm_log.rs  events.rs  invocation_log.rs  lib.rs  loom.rs  main.rs  memory.rs  models.rs  orchestrator_socket.rs  pi.rs  state.rs  turn.rs
