[package]
name = "glass"
version = "0.0.1"
edition = "2021"
description = "Glass — Discord DM orchestrator around a Loom-driven agent."
license = "MIT"

[lib]
name = "glass"
path = "src/lib.rs"

[[bin]]
name = "glass"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "cache",
    "rustls_backend",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dotenvy = "0.15"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
cron = "0.15"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
strip = true
